Bug 452964.  Don't flag pseudo-frames wrapping generated content as themselves being generated content, since they might be shared with non-generated content.  r+sr=roc.